--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 					<a href="Historydrift.html"><font color=""> <h1>История дрифта в Японии.</h1></font>
 						<a href="tougeracing.html"><font color=""><h1>Тот самый дрифт – начало touge racing.<h1></font></a>
 </head>
+<head> <script data-ad-client="ca-pub-9833571886375354" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <head>			
 <body>
 
 </body>
