--- a/1251.html
+++ b/1251.html
@@ -3,6 +3,8 @@
 
 <body background="img/1580075357_preview_White-Wallpaper-19.jpg"></body>
 <body>
+	
+<head><script data-ad-client="ca-pub-9833571886375354" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><head>
 
 	<a href="index.html"> <h1>Главная страница.</h1>
 	<a href="stat.html"><h1>Вернуться назад.<h1></a>
